--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,9 @@
         "Y": "Y",
         "ROTATION": "Rotation",
         "FONT_SIZE": "Font Size",
-        "OPACITY": "Opacity"
+        "OPACITY": "Opacity",
+        "WIDTH": "Width",
+        "HEIGHT": "Height"
       },
       "ADD_IMAGE_POPUP": {
         "DROP_ZONE": "Drop files here",
