JWT Auth + Refresh token

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,10 +8,13 @@
     },
     "LOGIN": {
       "HEADER": "Log in",
+      "SIGNIN": "Sign in",
       "POPUP": {
+        "NAME": "Name",
         "EMAIL": "Email",
         "PASSWORD": "Password",
         "CREATE_NEW": "Create new",
+        "BACK_TO_LOGIN": "Back to login",
         "SUBMIT": "Submit",
         "OR": "or"
       }
