--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
         "EMAIL": "Email",
         "PASSWORD": "Password",
         "CREATE_NEW": "Create new",
+        "FORGOT_PASSWORD": "Forgot password",
         "BACK_TO_LOGIN": "Back to login",
         "SUBMIT": "Submit",
         "OR": "or"
