--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,11 @@
         "OR": "or"
       }
     },
+    "PROJECT": {
+      "ITEM": {
+        "OPEN": "Open"
+      }
+    },
     "PDF": {
       "SIDEBAR": {
         "TEXT": "Text",
