Add/Delete/Edit images, change page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,6 +25,11 @@
     "PROJECT": {
       "ITEM": {
         "OPEN": "Open"
+      },
+      "EXPLORER": {
+        "POPUP": {
+          "ADD_DOCUMENT": "Add Document"
+        }
       }
     },
     "PDF": {
